TM Změna v Kontakt web

--- a/www.topmonks.cz/src/html/kontakt/index.html
+++ b/www.topmonks.cz/src/html/kontakt/index.html
@@ -15,27 +15,33 @@
 <meta property="business:contact_data:email" content="info@topmonks.com"/>
 <meta property="business:contact_data:phone_number" content="+420 226 257 521"/>
 <meta property="business:contact_data:website" content="https://www.topmonks.cz/"/>
+
 <style>
   :root {
-    --tm-contact-darkgrey: #3C3C3B;
-    --tm-contact-lightgrey: #777776;
+    --tm-black: #4a4a4a;
+    --tm-black-title: #3c3c3b;
   }
 
   body {
     line-height: 1.8;
   }
 
-  h2 {
+  h2.page_sub-title h2, h2 {
+    color: #3c3c3b;
     text-transform: none;
   }
 
-  h3 {
-    color: var(--tm-contact-darkgrey);
-    text-align: left;
+  .page_sub-title {
+    width: 763px;
+    margin: 0 auto 2em;
   }
 
-  span {
-    color: var(--tm-contact-darkgrey);
+  h3 {
+    color: #3c3c3b;
+    text-align: left;
+  }
+  a {
+    color: #F0BE59;
   }
 
   body {
@@ -45,6 +51,10 @@
 
   footer span {
     color: #ffffff;
+  }
+
+  footer {
+    background-color: #001F3F;
   }
 
   .box-member {
@@ -60,7 +70,6 @@
   }
 
   p.box_text-about {
-    color: var(--tm-contact-lightgrey);
     height: 60px;
   }
 
@@ -142,38 +151,19 @@
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="page_sub-title mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>Kontaktujte nás</h2>
-        <p>Ať už jste úspěšná a zavedená společnost, zajímavý startup nebo
-          u&nbsp;nás chcete pracovat, rádi o&nbsp;vás uslyšíme.</p>
+        <p>Ať už chcete v&nbsp;IT oboru poradit, konzultovat váš projekt, pomoct
+          s&nbsp;vývojem aplikace nebo zkonzultovat infrastrukturu, ozvěte se nám. Rádi si
+          s&nbsp;vámi domluvíme nezávaznou schůzku.</p>
       </div>
-      <div
-        class="box box-member mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop"
-        itemprop="employee" itemscope
-        itemtype="https://schema.org/Person">
-        <h3><b>Sales</b></h3>
-        <p class="box_text-about">Pokud jste střední nebo velká firma, obraťte se na Ondřeje. Pomůžeme
-          vám najít řešení problému, kterému aktuálně čelíte.</p>
-        <div class="mdc-layout-grid__inner">
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-            <img alt="[foto] Ondrej Tupý" src="https://insight.topmonks.com/avatar/ondrej-tupy"
-                 onerror="this.onerror=null; this.src='/images/monk_logo-c877778634.png'" width="112" height="112">
-          </div>
-          <div class="box_member-contact mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
-            <p><span itemprop="name">Ondrej Tupý</span><br>
-              <a itemprop="telephone" href="tel:+420730581488">+420&nbsp;730&nbsp;581&nbsp;488</a><br/>
-              <a itemprop="email" href="mailto:sales&#64;topmonks.com">sales@​topmonks.com</a></p>
-          </div>
-        </div>
-      </div>
-
       <div
         class="box box-member mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop"
         itemprop="employee" itemscope="" itemtype="https://schema.org/Person">
-        <h3><b>US Sales</b></h3>
-        <p class="box_text-about">Jsme otevření novým příležitostem a zkušenostem i&nbsp;v&nbsp;USA. Pokud pro
-          nás máte zajímavý projekt, kontaktujte Simonu.</p>
+        <h3><b>Konzultace v&nbsp;retailu a ecommerce</b></h3>
+        <p class="box_text-about">Know-How v&nbsp;oblasti retail a ecommerce nejlépe prodiskutujete se
+          Simonou.</p>
         <div class="mdc-layout-grid__inner">
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-            <img alt="[foto] Simona Zábržová" src="https://insight.topmonks.com/avatar/simona-zabrzova"
+            <img alt="[foto] Simona Zábržová" src="https://res.cloudinary.com/topmonks/image/upload/v1563262501/simona-zabrzova_zsr1ad.png"
                  onerror="this.onerror=null; this.src='/images/monk_logo-c877778634.png'" width="112" height="112">
           </div>
           <div class="box_member-contact mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
@@ -187,39 +177,20 @@
       <div
         class="box box-member mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop"
         itemprop="employee" itemscope="" itemtype="https://schema.org/Person">
-        <h3><b>Startup Studio</b></h3>
-        <p class="box_text-about"><a href="https://studio.topmonks.com/">TopMonks Startup Studio</a> vám pomůže proměnit
-          počáteční myšlenku v&nbsp;produkt.
-          Jsme vaši první investoři a konzultanti.</p>
+        <h3><b>Konzultace v&nbsp;retailu a fintechu</b></h3>
+        <p class="box_text-about">Know-how v&nbsp;oblasti retailu a fintechu nejlépe proberete s&nbsp;Ondrou.</p>
         <div class="mdc-layout-grid__inner">
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-            <img alt="[foto] Jiří Pénzeš" src="https://insight.topmonks.com/avatar/jiri-penzes"
-                 onerror="this.onerror=null; this.src='/images/monk_logo-c877778634.png'" width="112" height="112">
+          <div class="person--photo mdc-layout-grid__cell mdc-layout-grid__cell--span-4"><img alt="[photo] Ondrej Tupý"
+                                                                                              loading="lazy"
+                                                                                              src="https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_auto,f_auto/https://insight.topmonks.com/avatar/ondrej-tupy"
+                                                                                              srcset="https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_1,f_auto/https://insight.topmonks.com/avatar/ondrej-tupy, https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_1.5,f_auto/https://insight.topmonks.com/avatar/ondrej-tupy 1.5x, https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_2,f_auto/https://insight.topmonks.com/avatar/ondrej-tupy 2x, https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_3,f_auto/https://insight.topmonks.com/avatar/ondrej-tupy 3x"
+                                                                                              onerror="this.onerror=null; this.src='/assets/img/monk_logo-c877778634.png'"
+                                                                                              width="112" height="112">
           </div>
           <div class="box_member-contact mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
-            <p><span itemprop="name">Jirka Pénzeš</span><br>
-              <a itemprop="telephone" href="tel:+420732364404">+420&nbsp;732&nbsp;364&nbsp;404</a><br>
-              <a itemprop="email" href="mailto:studio&#64;topmonks.com">studio@​topmonks.com</a></p>
-          </div>
-        </div>
-      </div>
-
-      <div
-        class="box box-member mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop"
-        itemprop="employee" itemscope="" itemtype="https://schema.org/Person">
-        <h3><b>Happy Maker AKA HR</b></h3>
-        <p class="box_text-about">Neustále se poohlížíme po nových talentovaných lidech, kteří souzní
-          s&nbsp;naší kulturou. Zkontrolujte aktuálně <a href="https://www.topmonks.com/jobs">vypsané pozice</a> nebo se
-          ozvěte Aničce.</p>
-        <div class="mdc-layout-grid__inner">
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-            <img alt="[foto] Anička Kovácsová" src="https://insight.topmonks.com/avatar/anna-kovacsova"
-                 onerror="this.onerror=null; this.src='/images/monk_logo-c877778634.png'" width="112" height="112">
-          </div>
-          <div class="box_member-contact mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
-            <p><span itemprop="name">Anička Kovácsová</span><br>
-              <a itemprop="telephone" href="tel:+420777556859">+420&nbsp;777 556 859</a><br>
-              <a itemprop="email" href="mailto:happy&#64;topmonks.com">happy@topmonks.com</a></p>
+            <p><span itemprop="name">Ondrej Tupý</span><br>
+              <a itemprop="telephone" href="tel:+420730581488">+420 730 581 488</a><br>
+              <a itemprop="email" href="mailto:sales@​topmonks.com">sales@​topmonks.com</a></p>
           </div>
         </div>
       </div>
@@ -303,10 +274,10 @@
               <span itemprop="addressCountry">United States</span>
             </div>
             <a href="https://goo.gl/maps/UXjifMwu2h42" class="button" data-marker="san-francisco">ukázat na mapě</a>
-          <!--  <div itemprop="geo" itemscope itemtype="https://schema.org/GeoCoordinates">
-              <meta itemprop="latitude" content="37.336482">
-              <meta itemprop="longitude" content="-121.8905285">
-            </div>-->
+            <!--  <div itemprop="geo" itemscope itemtype="https://schema.org/GeoCoordinates">
+                <meta itemprop="latitude" content="37.336482">
+                <meta itemprop="longitude" content="-121.8905285">
+              </div>-->
           </div>
         </div>
       </div>
