TM page Kontakt - css

--- a/www.topmonks.cz/src/html/kontakt/index.html
+++ b/www.topmonks.cz/src/html/kontakt/index.html
@@ -26,8 +26,8 @@
     line-height: 1.8;
   }
 
-  h2.page_sub-title h2, h2 {
-    color: #3c3c3b;
+  .page_sub-title h2, h2 {
+    color: #001F3F;
     text-transform: none;
   }
 
@@ -37,7 +37,7 @@
   }
 
   h3 {
-    color: #3c3c3b;
+    color: #001F3F;
     text-align: left;
   }
   a {
@@ -110,6 +110,9 @@
   @media screen and (min-width: 840px) {
     p.box_text-about {
       height: 60px;
+    }
+    .page_sub-title p {
+      line-height: 35px;
     }
   }
 
