--- a/www.topmonks.cz/src/html/v2/index.html
+++ b/www.topmonks.cz/src/html/v2/index.html
@@ -234,20 +234,15 @@
 </section>
 
 <link rel="stylesheet" href="/stylesheets/hp/cooperation.css">
-<section id="nastroje" class="cooperation">
+<section class="cooperation">
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <p>Klienti, kterým jsme pomohli</p>
-      </div>
-      <div class="cooperation__logos mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <a href="https://www.pricefx.eu/site/" title="Pricefx homepage">{{sprite('img_logo_pricefx', '[logo]
-          Pricefx')}}</a>
-        <a href="https://swarmpit.io/" title="Swarmpit homepage">{{sprite('img_logo_swarmpit', '[logo] Swarmpit')}}</a>
-        <a href="https://www.purposefly.com/frank/" title="PurposeFly homepage">{{sprite('img_logo_purposefly', '[logo]
-          PurposeFly')}}</a>
-        <a href="https://github.com/GoogleChrome/lighthouse" title="Lighthouse homepage">{{sprite('img_logo_lighthouse',
-          '[logo] Lighthouse')}}</a>
+      <div class="box cooperation__logos mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <a href="https://www.erstegroupit.com/en/home" title="Erste Group homepage">{{sprite('img_logo_erste-group', '[logo] Erste Group')}}</a>
+        <a href="https://www.pricefx.eu/site/" title="Pricefx homepage">{{sprite('img_logo_pricefx', '[logo] Pricefx')}}</a>
+        <a href="https://zonky.cz/" title="Zonky homepage">{{sprite('img_logo_zonky', '[logo] Zonky')}}</a>
+        <a href="https://www.adler.info/CZ/cs/Home/" title="Adler homepage">{{sprite('img_adler', '[logo] Adler')}}</a>
+        <a href="https://www.countrylife.cz" title="Country Life homepage">{{sprite('img_logo_country-life', '[logo] Country Life')}}</a>
       </div>
     </div>
   </div>
