TM page Kontakt - opravy v mobile devices

--- a/www.topmonks.cz/src/html/kontakt/index.html
+++ b/www.topmonks.cz/src/html/kontakt/index.html
@@ -31,8 +31,8 @@
     text-transform: none;
   }
 
-  .page_sub-title {
-    width: 763px;
+  .page_sub-title p {
+    line-height: 35px;
     margin: 0 auto 2em;
   }
 
@@ -112,7 +112,7 @@
       height: 60px;
     }
     .page_sub-title p {
-      line-height: 35px;
+      width: 763px;
     }
   }
 
@@ -128,6 +128,9 @@
     hr {
       width: 736px;
       margin-top: 2.5em;
+    }
+    .box img {
+      margin: 0 auto;
     }
   }
 
