Kontakt - sub title width

--- a/www.topmonks.cz/src/html/kontakt/index.html
+++ b/www.topmonks.cz/src/html/kontakt/index.html
@@ -111,6 +111,8 @@
     p.box_text-about {
       height: 60px;
     }
+  }
+  @media (min-width: 840px) {
     .page_sub-title p {
       width: 763px;
     }
