--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -388,7 +388,7 @@
 
         <div
           class="blog_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-          <p><span class="published-date">1.1.2019 / </span> <a type="media_type" href="https://m.alza.cz">Alza.cz</a>
+          <p><span class="published-date">1.1.2019 / </span> <a type="media_type" href="https://www.alza.cz/">Alza.cz</a>
           </p>
           <h3>ICO. Co je prvotní nabídka kryptoměny?</h3>
           <p class="perex">Prvotní nabídky kryptoměnových tokenů, tzv. ICO, se během posledních
@@ -408,7 +408,7 @@
         </div>
         <div
           class="blog_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-          <p><span class="published-date">20.4.2018 / </span> <a type="media_type" href="https://m.alza.cz">Alza.cz</a>
+          <p><span class="published-date">20.4.2018 / </span> <a type="media_type" href="https://www.alza.cz/">Alza.cz</a>
           </p>
           <h3>Kryptoměnové forky</h3>
           <p class="perex">Jaký je rozdíl mezi hard a soft forkem? Co dělat a co nedělat při
