Blockchain - new blog story

--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -444,6 +444,29 @@
             </div>
           </div>
         </div>
+
+        <div
+          class="blog_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+          <p><span class="published-date">19.6.2018 / </span> <a type="media_type" href="https://hackernoon.com">Hackernoon.com</a>
+          </p>
+          <h3>ICOs: bullshitting on steroids</h3>
+          <p class="perex">Chamath Palihapitiya from Social Capital is, for me at least, the most
+            influential innovator in the VC world. During his interview at Stanford, he delivered an impressive review of the startup
+            world: “…Everybody is bullshitting. That’s&nbsp;what it means… If anybody
+            looks at you and tells you they know what the fuck they’re doing, they’re
+            lying”.</p>
+          <hr>
+          <div class="mdc-layout-grid__inner">
+            <div class="personal__id mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+              <img class="person__photo" src="https://res.cloudinary.com/topmonks/image/upload/v1563778591/avatars/jan-lopusek_avatar_gcmert.png" alt="[photo] Jan Lopusek" width="32" height="32">
+              <span class="name">Jan Lopusek</span>
+            </div>
+            <div class="article-link mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+              <a href="https://hackernoon.com/icos-bullshitting-on-steroids-7b8ce32bce96">Show article</a>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
   </section>
