Update textu a linkov

--- a/www.topmonks.cz/src/html/v2/index.html
+++ b/www.topmonks.cz/src/html/v2/index.html
@@ -69,7 +69,7 @@
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
-        <h2 class="jumbotron__title">Jsme IT konzultanti a seniorní developeři.</h2>
+        <h2 class="jumbotron__title">Jsme IT konzultanti a seniorní vývojáři.</h2>
         <div class="box box--lead box--mobile-only">
           <p class="sub-info">Pracujeme s&nbsp;IT systémy, které už máte ve firmě zavedené a máme jasný
             cíl. Zvýšit vaše zisky napříč všemi distribučními kanály.</p>
@@ -144,7 +144,7 @@
             vyšší prodej u&nbsp;sezónního zboží, chtěli byste zavést dynamický pricing
             nebo zoptimalizovat predikci výroby? Chtěli byste efektivně plánovat směny?
             Nebo nevíte, zda se vám vyplatí&nbsp;cloud?</p>
-          <a class="action-button jumbotron__cta" href="#kontakt">Více o službě</a>
+          <a class="action-button jumbotron__cta" href="https://calendly.com/simona-zabrzova/nezavazna-schuzka?">Nezávazná schůzka</a>
 
         </div>
       </div>
@@ -225,8 +225,7 @@
             ji zoptimalizovat? Potřebujete zvýšit konverzní poměr při nákupu? Ocenili
             byste upozornění aplikace na optimalizaci zboží v&nbsp;čase? Chcete zavést
             dynamický pricing a nevíte&nbsp;jak?</p>
-          <a class="action-button jumbotron__cta" href="#kontakt">Více o službě</a>
-
+          <a class="action-button jumbotron__cta" href="https://calendly.com/simona-zabrzova/nezavazna-schuzka?">Nezávazná schůzka</a>
         </div>
       </div>
     </div>
