TM footer in phone and tablet devices

--- a/www.topmonks.cz/src/html/shared/footer.html
+++ b/www.topmonks.cz/src/html/shared/footer.html
@@ -54,10 +54,10 @@
   <div class="copy-and-media">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner tm-layout-wrapper">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-6-desktop">
           <p>© 2019 TopMonks s.r.o.</p>
         </div>
-        <div class="footer_social-buttons mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+        <div class="footer_social-buttons mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-6-desktop">
           <div class="social-buttons">
             <a href="https://www.linkedin.com/company/topmonks/" title="TopMonks on LinkedIn" rel="me" itemprop="sameAs"
               class="linkedin">
