--- a/www.topmonks.cz/src/html/index.html
+++ b/www.topmonks.cz/src/html/index.html
@@ -242,11 +242,12 @@
         <p>Klienti, kterým jsme pomohli</p>
       </div>
       <div class="cooperation__logos mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <a href="https://www.erstegroupit.com/en/home" title="Erste Group homepage">{{sprite('img_logo_erste-group',
+        <a href="https://www.erstegroupit.com/en/home" title="jdi na Erste Group homepage">{{sprite('img_logo_erste-group',
           '[logo] Erste Group')}}</a>
-        <a href="https://www.pricefx.eu/site/" title="Pricefx homepage">{{sprite('img_logo_pricefx', '[logo]
+        <a href="https://www.pricefx.eu/site/" title="jdi na Pricefx homepage">{{sprite('img_logo_pricefx', '[logo]
           Pricefx')}}</a>
-        <a href="https://zonky.cz/" title="Zonky homepage">{{sprite('img_logo_zonky', '[logo] Zonky')}}</a>
+        <a href="https://zonky.cz/" title="jdi na Zonky homepage">{{sprite('img_logo_zonky', '[logo] Zonky')}}</a>
+        <a href="https://www.adler.info/" title="jdi na Adler homepage">{{sprite('img_logo_adler', '[logo] Adler')}}</a>
       </div>
     </div>
   </div>
