--- a/www.topmonks.cz/src/html/index.html
+++ b/www.topmonks.cz/src/html/index.html
@@ -108,7 +108,7 @@
           Stačí si vybrat, který je vaší činnosti nejbližší.</p>
       </div>
       <div class="fake-button mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <a class="jumbotron__cta" href="#kontakt">CHCI KONZULTOVAT</a>
+        <a class="jumbotron__cta" href="https://calendly.com/simona-zabrzova/nezavazna-schuzka">CHCI KONZULTOVAT</a>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <div class="mdc-layout-grid__cell box">
