--- a/www.topmonks.cz/src/html/index.html
+++ b/www.topmonks.cz/src/html/index.html
@@ -367,7 +367,7 @@
             myšlenky při navrhování a auditu architektury.
           </blockquote>
           <hr class="line-between_grey">
-          <figcaption><b>Nataliya Rozhok</b><br>DEBNK</figcaption>
+          <figcaption><b>Patrika Tjokordy</b><br>DEBNK</figcaption>
         </div>
       </div>
     </div>
