--- a/www.hookamonk.com/src/html/index.html
+++ b/www.hookamonk.com/src/html/index.html
@@ -91,7 +91,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   </div>
   <div class="container-3 w-container">
     <div data-w-id="357e77f9-9a04-ba0a-a6b7-48d0dce08554" class="exclusivity">
-      <h3 class="subheading">Do you wish to have a sensational experience of smoking? Everything starts with a personal invitation to Hookamonk whitelist.</h3>
+      <h3 class="subheading">Do you wish to have a sensational experience of smoking? Everything starts with a personal invitation from us.</h3>
       <p class="package-heading">Request an invitation by leaving your email address and wait for a response.</p>
       <div class="form-block w-form">
         <form id="wf-form-HookaMonk" name="wf-form-HookaMonk" data-name="HookaMonk" class="form"><input type="email" class="text-field w-input" maxlength="256" name="email" data-name="Email" placeholder="Enter your e-mail" id="email" required=""><input type="submit" value="I wish to get on your whitelist" data-wait="Please wait..." class="submit-button w-button"></form>
@@ -106,7 +106,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   </div>
   <div class="photos"><img src="images/img_hookaspot.png" srcset="images/img_hookaspot-p-500.png 500w, images/img_hookaspot-p-800.png 800w, images/img_hookaspot-p-1080.png 1080w, images/img_hookaspot.png 1424w" sizes="(max-width: 991px) 100vw, (max-width: 1898px) 75vw, 1424px" alt=""><img src="images/story.svg" data-w-id="3adffdf6-93a0-b9ad-a11a-9de5d61356d9" alt=""></div>
   <div class="story w-container">
-    <h3 data-w-id="948d3f79-c0cd-e5ec-14d4-a020352b068d" class="subheading">We had a dream: <span class="gold">To smoke the best hookah ever</span>. We were never fully satisfied with those available in the market. So we made it by ourselves.<br><br>Interested? Let&#x27;s chat.<br><a href="mailto:sales@hookahmonk.com?subject=I%20want%20to%20chat%20about%20HookaMonk" class="link">sales@hookahmonk.com</a></h3>
+    <h3 data-w-id="948d3f79-c0cd-e5ec-14d4-a020352b068d" class="subheading">We had a dream: <span class="gold">To smoke the best hookah ever</span>. We were never fully satisfied with those available in the market. So we made it ourselves.<br><br>Interested? Let&#x27;s chat.<br><a href="mailto:sales@hookahmonk.com?subject=I%20want%20to%20chat%20about%20HookaMonk" class="link">sales@hookahmonk.com</a></h3>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
