It-retail stylesheets

--- a/www.topmonks.cz/src/html/it-retail/index.html
+++ b/www.topmonks.cz/src/html/it-retail/index.html
@@ -19,6 +19,7 @@
 
 {% block content %}
 <link rel="stylesheet" href="/stylesheets/v2.css">
+<link rel="stylesheet" href="/stylesheets/sub-pages/it-retail.css">
 <link rel="stylesheet" href="/stylesheets/sub-pages/main.css">
 
 <section class="jumbotron">
