--- a/www.topmonks.cz/src/html/it-retail/index.html
+++ b/www.topmonks.cz/src/html/it-retail/index.html
@@ -1,9 +1,9 @@
 {% extends 'layouts/topmonks.html' %}
 {% set page = 'topmonks-it-retail' %}
-{% block title %}IT in Retail - TopMonks{% endblock %}
+{% block title %}IT v Retailu - TopMonks{% endblock %}
 
 {% block head %}
-<meta property="og:title" content="TopMonks IT in Retail">
+<meta property="og:title" content="TopMonks v IT Retailu">
 <meta property="fb:pages" content="190700404282725">
 <meta property="og:type" content="business.business">
 <meta property="og:url" content="https://www.topmonks.cz/it-retail/">
@@ -42,6 +42,7 @@
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <h1>Konzultace pro retail</h1>
         <h2>IT v&nbsp;retailu</h2>
         <p class="sub-info">Máme bohaté zkušenosti, snažíme se porozumět vašemu byznysu, společně zoptimalizovat stav vašeho IT, abychom
           dosáhli požadovaných výsledků.</p>
