--- a/www.topmonks.cz/src/html/retail-consultation/index.html
+++ b/www.topmonks.cz/src/html/retail-consultation/index.html
@@ -1,9 +1,9 @@
 {% extends 'layouts/topmonks.html' %}
 {% set page = 'topmonks-retail-consultation' %}
-{% block title %}IT in Retail - TopMonks{% endblock %}
+{% block title %}Retailová Konzultace - TopMonks{% endblock %}
 
 {% block head %}
-<meta property="og:title" content="TopMonks in Retail Consultation">
+<meta property="og:title" content="TopMonks Retailová Konzultace Středně Velké Firmy">
 <meta property="fb:pages" content="190700404282725">
 <meta property="og:type" content="business.business">
 <meta property="og:url" content="https://www.topmonks.cz/retail-consultation/">
@@ -34,6 +34,7 @@
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <h1>Zákazníky nejoblíbenější konzultace</h1>
         <h2>Retailová konzultace středně velké firmy</h2>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
