--- a/www.topmonks.cz/src/html/it-ecommerce/index.html
+++ b/www.topmonks.cz/src/html/it-ecommerce/index.html
@@ -1,9 +1,9 @@
 {% extends 'layouts/topmonks.html' %}
 {% set page = 'topmonks-it-ecommerce' %}
-{% block title %}IT in Retail - TopMonks{% endblock %}
+{% block title %}IT v Ecommerce - TopMonks{% endblock %}
 
 {% block head %}
-<meta property="og:title" content="TopMonks IT in Ecommerce">
+<meta property="og:title" content="TopMonks IT v Ecommerce">
 <meta property="fb:pages" content="190700404282725">
 <meta property="og:type" content="business.business">
 <meta property="og:url" content="https://www.topmonks.cz/it-ecommerce/">
@@ -42,6 +42,7 @@
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <h1>Konzultace ecommerce</h1>
         <h2>IT v&nbsp;ecommerce</h2>
         <p class="sub-info">Máme bohaté zkušenosti z&nbsp;ecommerce a online prostředí, snažíme se
           porozumět vašemu byznysu a společně zoptimalizovat stav vašeho IT, abychom
