--- a/www.topmonks.cz/src/html/it-retail/index.html
+++ b/www.topmonks.cz/src/html/it-retail/index.html
@@ -18,7 +18,7 @@
 <style>
   @media not all, screen and (min-resolution: 192dpi) and (min-width: 480px), screen and (min-resolution: 2dppx) and (min-width: 480px) {
     body {
-      background: url("https://res.cloudinary.com/topmonks/image/upload/v1565353972/TM%20Subpages/subpages_bgnd.png") no-repeat right calc(50% - 430px) top;
+      background: url("https://res.cloudinary.com/topmonks/image/upload/v1565353972/TM%20Subpages/subpages_bgnd.png") no-repeat right calc(35% - 430px) top;
       background-size: 919px auto;
       overflow-x: hidden;
     }
@@ -26,7 +26,7 @@
 
   @media screen and (min-width: 480px) {
     body {
-      background: url("https://res.cloudinary.com/topmonks/image/upload/v1565353972/TM%20Subpages/subpages_bgnd.png") no-repeat right calc(50% - 430px) top -16px;
+      background: url("https://res.cloudinary.com/topmonks/image/upload/v1565353972/TM%20Subpages/subpages_bgnd.png") no-repeat right calc(35% - 430px) top -16px;
       background-size: 919px auto;
       overflow-x: hidden;
     }
@@ -41,13 +41,13 @@
 <section class="jumbotron">
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-8-desktop">
         <h1>Konzultace pro retail</h1>
         <h2>IT v&nbsp;retailu</h2>
         <p class="sub-info">Máme bohaté zkušenosti, snažíme se porozumět vašemu byznysu, společně zoptimalizovat stav vašeho IT, abychom
           dosáhli požadovaných výsledků.</p>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
       </div>
       <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <svg width="100" height="100" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -203,7 +203,7 @@
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>Jak to děláme v&nbsp;praxi?</h2>
-        <p>Vybrali jsme pro vás nejčastější situace, které s&nbsp;klienty
+        <p class="sub-info">Vybrali jsme pro vás nejčastější situace, které s&nbsp;klienty
           řešíme.</p>
       </div>
       <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
