--- a/www.topmonks.cz/src/html/it-ecommerce/index.html
+++ b/www.topmonks.cz/src/html/it-ecommerce/index.html
@@ -18,7 +18,7 @@
 <style>
   @media not all, screen and (min-resolution: 192dpi) and (min-width: 480px), screen and (min-resolution: 2dppx) and (min-width: 480px) {
     body {
-      background: url("https://res.cloudinary.com/topmonks/image/upload/v1565353972/TM%20Subpages/subpages_bgnd.png") no-repeat right calc(50% - 430px) top;
+      background: url("https://res.cloudinary.com/topmonks/image/upload/v1565353972/TM%20Subpages/subpages_bgnd.png") no-repeat right calc(35% - 430px) top;
       background-size: 919px auto;
       overflow-x: hidden;
     }
@@ -26,7 +26,7 @@
 
   @media screen and (min-width: 480px) {
     body {
-      background: url("https://res.cloudinary.com/topmonks/image/upload/v1565353972/TM%20Subpages/subpages_bgnd.png") no-repeat right calc(50% - 430px) top -16px;
+      background: url("https://res.cloudinary.com/topmonks/image/upload/v1565353972/TM%20Subpages/subpages_bgnd.png") no-repeat right calc(35% - 430px) top -16px;
       background-size: 919px auto;
       overflow-x: hidden;
     }
@@ -41,14 +41,14 @@
 <section class="jumbotron">
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-8-desktop">
         <h1>Konzultace ecommerce</h1>
         <h2>IT v&nbsp;ecommerce</h2>
         <p class="sub-info">Máme bohaté zkušenosti z&nbsp;ecommerce a online prostředí, snažíme se
           porozumět vašemu byznysu a společně zoptimalizovat stav vašeho IT, abychom
           dosáhli maximálních konverzí, přehlednosti, jednoduchosti a efektivity.</p>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
       </div>
       <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <svg width="100" height="100" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
