--- a/www.topmonks.cz/src/html/consultation/index.html
+++ b/www.topmonks.cz/src/html/consultation/index.html
@@ -16,6 +16,9 @@
 <meta property="business:contact_data:phone_number" content="+420 226 257 521"/>
 <meta property="business:contact_data:website" content="https://www.topmonks.cz/"/>
 <style>
+  .jumbotron .sub-info {
+    font-size: 20px;
+  }
   .networking h3 {
     text-align: left;
   }
@@ -42,7 +45,7 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h1>Zákazníky nejoblíbenější konzultace</h1>
         <h2>Konzultace a implementace inteligentní cenotvorby</h2>
-        <p class="sub-info">Pro zákazníka s&nbsp;obratem 500&nbsp;milionů, který se pohybuje v&nbsp;oblasti B2B
+        <p class="sub-info">Pro zákazníka s&nbsp;obratem <a class="purple" style="text-decoration: none; border-bottom: none">500&nbsp;milionů</a>, který se pohybuje v&nbsp;oblasti B2B
           jsme zanalyzovali historické transakce. Dynamická práce s&nbsp;cenami a slevami
           je nejjednodušší způsob zvýšení obratu. Na základě analýzy jsem
           pomohli s&nbsp;dynamickým nastavování cen a s&nbsp;přípravou efektivních promo
@@ -70,7 +73,7 @@
       <div
         class="consultation_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <ul>
-          <li>Zvýšili zisk během 2&nbsp;měsíců o&nbsp;<div class="purple">6%</div>
+          <li>Zvýšili zisk během 2&nbsp;měsíců o&nbsp<a class="purple">6%</a>
           </li>
         </ul>
       </div>
@@ -85,8 +88,7 @@
       <div
         class="consultation_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <ul>
-          <li>Zoptimalizovali více než <br>
-            <div class="purple"> 33.000&nbsp;položek</div>
+          <li>Zoptimalizovali více než<a class="purple">33.000 položek</a>
           </li>
         </ul>
       </div>
