--- a/www.topmonks.cz/src/html/retail-consultation/index.html
+++ b/www.topmonks.cz/src/html/retail-consultation/index.html
@@ -35,7 +35,7 @@
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
         <h1>Zákazníky nejoblíbenější konzultace</h1>
-        <h2>Retailová konzultace<br>středně velké firmy</h2>
+        <h2>Retailová konzultace středně velké firmy</h2>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
       </div>
