Subpage - consultation purple text

--- a/www.topmonks.cz/src/html/consultation/index.html
+++ b/www.topmonks.cz/src/html/consultation/index.html
@@ -29,6 +29,7 @@
   }
 
   .purple {
+    display: contents;
     font-weight: bold;
   }
 
@@ -45,7 +46,7 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h1>Zákazníky nejoblíbenější konzultace</h1>
         <h2>Konzultace a implementace inteligentní cenotvorby</h2>
-        <p class="sub-info">Pro zákazníka s&nbsp;obratem <a class="purple" style="text-decoration: none; border-bottom: none">500&nbsp;milionů</a>, který se pohybuje v&nbsp;oblasti B2B
+        <p class="sub-info">Pro zákazníka s&nbsp;obratem <span class="purple">500&nbsp;milionů</span>, který se pohybuje v&nbsp;oblasti B2B
           jsme zanalyzovali historické transakce. Dynamická práce s&nbsp;cenami a slevami
           je nejjednodušší způsob zvýšení obratu. Na základě analýzy jsem
           pomohli s&nbsp;dynamickým nastavování cen a s&nbsp;přípravou efektivních promo
@@ -65,15 +66,14 @@
       <div
         class="consultation_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <ul>
-          <li>Plošně zvýšili marži o&nbsp;
-            <div class="purple">5%</div>
+          <li>Plošně zvýšili marži o&nbsp;<span class="purple">5%</span>
           </li>
         </ul>
       </div>
       <div
         class="consultation_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <ul>
-          <li>Zvýšili zisk během 2&nbsp;měsíců o&nbsp<a class="purple">6%</a>
+          <li>Zvýšili zisk během 2&nbsp;měsíců o&nbsp<span class="purple">6%</span>
           </li>
         </ul>
       </div>
@@ -88,7 +88,7 @@
       <div
         class="consultation_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <ul>
-          <li>Zoptimalizovali více než<a class="purple">33.000 položek</a>
+          <li>Zoptimalizovali více než <span class="purple">33.000 položek</span>
           </li>
         </ul>
       </div>
