--- a/www.topmonks.cz/src/html/index.html
+++ b/www.topmonks.cz/src/html/index.html
@@ -144,8 +144,7 @@
             vyšší prodej u&nbsp;sezónního zboží, chtěli byste zavést dynamický pricing
             nebo zoptimalizovat predikci výroby? Chtěli byste efektivně plánovat směny?
             Nebo nevíte, zda se vám vyplatí&nbsp;cloud?</p>
-          <a class="action-button jumbotron__cta" href="https://calendly.com/simona-zabrzova/nezavazna-schuzka?">Nezávazná
-            schůzka</a>
+          <a class="action-button jumbotron__cta" href="https://www.topmonks.cz/it-retail/">Více o službě</a>
 
         </div>
       </div>
@@ -226,8 +225,7 @@
             ji zoptimalizovat? Potřebujete zvýšit konverzní poměr při nákupu? Ocenili
             byste upozornění aplikace na optimalizaci zboží v&nbsp;čase? Chcete zavést
             dynamický pricing a nevíte&nbsp;jak?</p>
-          <a class="action-button jumbotron__cta" href="https://calendly.com/simona-zabrzova/nezavazna-schuzka?">Nezávazná
-            schůzka</a>
+          <a class="action-button jumbotron__cta" href="https://www.topmonks.cz/it-ecommerce/">Více o službě</a>
         </div>
       </div>
     </div>
