--- a/www.topmonks.cz/src/html/it-retail/index.html
+++ b/www.topmonks.cz/src/html/it-retail/index.html
@@ -18,7 +18,7 @@
 <style>
   @media not all, screen and (min-resolution: 192dpi) and (min-width: 480px), screen and (min-resolution: 2dppx) and (min-width: 480px) {
     body {
-      background: url("https://res.cloudinary.com/topmonks/image/upload/v1565353972/TM%20Subpages/subpages_bgnd.png") no-repeat right calc(35% - 430px) top;
+      background: url("https://res.cloudinary.com/topmonks/image/upload/v1565353972/TM%20Subpages/subpages_bgnd.png") no-repeat right calc(30% - 430px) top;
       background-size: 919px auto;
       overflow-x: hidden;
     }
@@ -26,7 +26,7 @@
 
   @media screen and (min-width: 480px) {
     body {
-      background: url("https://res.cloudinary.com/topmonks/image/upload/v1565353972/TM%20Subpages/subpages_bgnd.png") no-repeat right calc(35% - 430px) top -16px;
+      background: url("https://res.cloudinary.com/topmonks/image/upload/v1565353972/TM%20Subpages/subpages_bgnd.png") no-repeat right calc(30% - 430px) top -16px;
       background-size: 919px auto;
       overflow-x: hidden;
     }
@@ -135,7 +135,7 @@
         <p>Výsledkem IT konzultace je propojenost s&nbsp;účetních systémů se
           skladovým hospodářství, logistiky, propojenost retailu s&nbsp;ecommerce,
           optimalizace cen a zásob, sezonní stabilita systémů a obvykle vyšší zisk.
-          Docílíme ho pomocí celkového zefektivnění procesů, které v&nbsp;původním
+          <a href="https://www.topmonks.cz/retail-consultation/" style="text-decoration: none" class="purple">Docílíme ho pomocí celkového zefektivnění procesů</a>, které v&nbsp;původním
           stavu fungují pod potenciálem svých možností.</p>
       </div>
     </div>
@@ -210,7 +210,7 @@
         <h3 class="purple">Retailová konzultace středně velké firmy</h3>
         <p>Přečtěte si více o&nbsp;tom, jak jsme pomohli vyřešit problémy středně
           velké firmy s&nbsp;obratem 220&nbsp;milionů&nbsp;korun.</p>
-        <a href="https://www.topmonks.cz/consultation/" class="button">ZJISTIT VÍCE</a>
+        <a href="https://www.topmonks.cz/retail-consultation/" class="button">ZJISTIT VÍCE</a>
       </div>
       <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3 class="purple">Implementace inteligentní cenotvorby</h3>
