--- a/www.topmonks.cz/src/html/it-ecommerce/index.html
+++ b/www.topmonks.cz/src/html/it-ecommerce/index.html
@@ -244,7 +244,7 @@
         <h3 class="purple">Retailová konzultace středně velké firmy</h3>
         <p>Přečtěte si více o&nbsp;tom, jak jsme pomohli vyřešit problémy středně
           velké firmy s&nbsp;obratem 220&nbsp;milionů&nbsp;korun.</p>
-        <a href="https://www.topmonks.cz/consultation/" class="button">ZJISTIT VÍCE</a>
+        <a href="https://www.topmonks.cz/retail-consultation/" class="button">ZJISTIT VÍCE</a>
       </div>
       <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3 class="purple">Implementace inteligentní cenotvorby</h3>
@@ -256,7 +256,7 @@
         <h3 class="purple">Komplexní digitální audit</h3>
         <p>Přečtěte si o&nbsp;tom, jak můžete zvýšit ziskovost vašich digitálních
           aktivit díky našemu komplexnímu digitálnímu auditu.</p>
-        <a href="https://www.topmonks.cz/consultation/" class="button">ZJISTIT VÍCE</a>
+        <a href="https://www.topmonks.cz/digital-audit/" class="button">ZJISTIT VÍCE</a>
       </div>
     </div>
   </div>
