Subpages links between

--- a/www.topmonks.cz/src/html/index.html
+++ b/www.topmonks.cz/src/html/index.html
@@ -272,14 +272,16 @@
           analýzu výkonu systému.</p>
       </div>
       <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+       <a href="https://www.topmonks.cz/digital-audit/">
         <h3>Chci web, co prodává</h3>
         <p>Chcete zvýšit zisky díky marketingu. Zrealizujeme podrobný digitální
-          audit vašich webových stránek.</p>
+          audit vašich webových stránek.</p></a>
       </div>
 
       <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+       <a href="https://www.topmonks.cz/consultation/">
         <h3>Chci optimalizovat ceny</h3>
-        <p>Chcete zavést dynamický pricing, sledovat výkon slev a automaticky reagovat na ceny konkurence.</p>
+         <p>Chcete zavést dynamický pricing, sledovat výkon slev a automaticky reagovat na ceny konkurence.</p></a>
       </div>
 
       <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
@@ -293,9 +295,10 @@
           programátorský&nbsp;tým.</p>
       </div>
       <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+       <a href="https://www.topmonks.cz/retail-consultation/">
         <h3>Chci poradit s&nbsp;IT</h3>
         <p>Potřebujete konzultovat váš nápad, výsledky analýzy, nezávislou
-          nabídku z&nbsp;tendru.</p>
+          nabídku z&nbsp;tendru.</p></a>
       </div>
 
       <div class="advicing_btn mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
