Replaced Anička with Aleš on Jobs page

--- a/www.topmonks.com/src/html/jobs/index.html
+++ b/www.topmonks.com/src/html/jobs/index.html
@@ -50,8 +50,7 @@
     </div>
   </div>
   <div class="contact-info mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-    <p>Interested? Get in touch with Anička! <a href="mailto:happy@topmonks.com">happy@topmonks.com</a> / <a
-      href="tel:+420 777 556 859">+420 777 556 859</a></p>
+    <p>Interested? Get in touch with us! <a href="mailto:happy@topmonks.com">happy@topmonks.com</a></p>
   </div>
 </section>
 <div
@@ -624,19 +623,18 @@
       <a class="action-button jumbotron__cta" href="https://www.topmonks.com/meet-us/">COME AND MEET US</a>
     </div>
     <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-      <h3>Get in touch with Anička</h3>
+      <h3>Get in touch with Aleš</h3>
       <p>We are always on the lookout for talented Monks to join our team. Get in touch with Anicka to find out more
         about opened positions. In case you have not found the desired position, let us know. will figure something
         out.</p>
       <div class="mdc-layout-grid__inner">
         <div
           class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-iphone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
-          {{ avatar(members['anna-kovacsova'], 112) }}
+          {{ avatar(members['ales-roubicek'], 112) }}
         </div>
         <div
           class="box_member-contact mdc-layout-grid__cell mdc-layout-grid__cell--span-4-iphone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-10-desktop">
-          <p><span itemprop="name">Anička Kovácsová</span>
-            <br><a itemprop="telephone" href="tel:+420777556859">+420&nbsp;777&nbsp;556&nbsp;859</a>
+          <p><span itemprop="name">Aleš Roubíček</span>
             <br><a itemprop="email" href="mailto:happy@topmonks.com">happy@topmonks.com</a>
           </p></div>
       </div>
