--- a/www.topmonks.com/src/html/jobs/index.html
+++ b/www.topmonks.com/src/html/jobs/index.html
@@ -624,7 +624,7 @@
     </div>
     <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
       <h3>Get in touch with Aleš</h3>
-      <p>We are always on the lookout for talented Monks to join our team. Get in touch with Anicka to find out more
+      <p>We are always on the lookout for talented Monks to join our team. Get in touch with us to find out more
         about opened positions. In case you have not found the desired position, let us know. will figure something
         out.</p>
       <div class="mdc-layout-grid__inner">
